fix UI for create-terminal edit-terminal

--- a/src/app/terminals/edit-terminals/edit-terminals.component.html
+++ b/src/app/terminals/edit-terminals/edit-terminals.component.html
@@ -131,9 +131,10 @@
               </mat-card-title>
             </mat-card-header>
             <mat-card-content fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
-              <mat-form-field *ngIf="editTerminalForm.contains('timeChargeValid')" fxFlex="48%">
-                <mat-label>Số lần cà/ngày</mat-label>
-                <input matInput type="number" formControlName="timeChargeValid" />
+              <mat-form-field *ngIf="editTerminalForm.contains('timeChargeValid')" fxFlex>
+                <mat-label>Số lần giao dịch cùng ngân hàng/ngày</mat-label>
+                <input matInput type="number" formControlName="timeChargeValid"
+                matTooltip="Đây là cài đặt số mà thẻ được phép cà vào máy POS này và các máy POS khác có cùng một ngân hàng phát hàng" />
                 <mat-error
                   *ngIf="editTerminalForm.controls.timeChargeValid.hasError('required')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' | translate"
@@ -147,18 +148,20 @@
                   [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMax' | translate"
                 ></mat-error>
               </mat-form-field>
-              <mat-form-field *ngIf="editTerminalForm.contains('banksCheck')" fxFlex="30%">
+              <mat-form-field *ngIf="editTerminalForm.contains('banksCheck')" fxFlex>
                 <mat-label>Không giao dịch thẻ thuộc ngân hàng</mat-label>
-                <mat-select   formControlName="banksCheck" multiple>
+                <mat-select   formControlName="banksCheck" multiple 
+                matTooltip="Đây là ô chọn các ngân hàng mà thẻ của nó sẽ không được phép thực hiện giao dịch trên máy POS này">
                   <mat-option *ngFor="let bank of banks" [value]="bank.bankCode">
                     {{ bank.bankName }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
 
-              <mat-form-field *ngIf="editTerminalForm.contains('cardsCheck')" fxFlex="30%">
+              <mat-form-field *ngIf="editTerminalForm.contains('cardsCheck')" fxFlex>
                 <mat-label>Không giao dịch thẻ thuộc loại</mat-label>
-                <mat-select multiple  formControlName="cardsCheck">
+                <mat-select multiple  formControlName="cardsCheck" 
+                matTooltip="Đây là ô chọn các loại thẻ sẽ không được phép thực hiện giao dịch trên máy POS này">
                   <mat-option *ngFor="let type of cardTypes" [value]="type.code">
                     {{ type.description }}
                   </mat-option>
@@ -171,9 +174,10 @@
         <h3 class="mat-h3" fxFlexFill>{{ "Terminal_Component.FormTerminal.labelGeneral" | translate }}</h3>
 
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+
           <mat-form-field *ngIf="editTerminalForm.contains('costPercentage')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelCostPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="costPercentage" type="number" />
+            <input matInput required formControlName="costPercentage" type="number" matTooltip="Phí phải trả cho Đối tác máy"/>
             <mat-error
               *ngIf="editTerminalForm.controls.costPercentage.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -183,9 +187,10 @@
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMax' | translate"
             ></mat-error>
           </mat-form-field>
+
           <mat-form-field *ngIf="editTerminalForm.contains('cogsPercentage')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelCogsPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="cogsPercentage" type="number" />
+            <input matInput required formControlName="cogsPercentage" type="number" matTooltip="Phí áp dụng cho các chi nhánh"/>
             <mat-error
               *ngIf="editTerminalForm.controls.cogsPercentage.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -197,7 +202,7 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('txnRateMin')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMinPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="txnRateMin" type="number" />
+            <input matInput required formControlName="txnRateMin" type="number" matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng" />
             <mat-error
               *ngIf="editTerminalForm.controls.txnRateMin.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -209,7 +214,7 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('txnRateMax')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMaxPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="txnRateMax" type="number" />
+            <input matInput required formControlName="txnRateMax" type="number" matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng"/>
             <mat-error
               *ngIf="editTerminalForm.controls.txnRateMax.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -221,22 +226,23 @@
           </mat-form-field>
           <mat-form-field *ngIf="editTerminalForm.contains('maxLimitAmount')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMaxLimitAmount" | translate }}</mat-label>
-            <input currencyMask matInput required formControlName="maxLimitAmount" />
+            <input currencyMask matInput required formControlName="maxLimitAmount" matTooltip="Hạn mức giao dịch tối đa cho 1 lần cà"/>
             <mat-error
               *ngIf="editTerminalForm.controls.maxLimitAmount.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin100000' | translate"
             ></mat-error>
           </mat-form-field>
-          <mat-form-field *ngIf="editTerminalForm.contains('levelLimit')" fxFlex="10%">
+          <mat-form-field *ngIf="editTerminalForm.contains('levelLimit')" fxFlex="15%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelLevelLimit" | translate }}</mat-label>
-            <input matInput required formControlName="levelLimit" />
+            <input matInput required formControlName="levelLimit" matTooltip="Số lần mà một thẻ tín dụng được phép cà lên máy POS này trong 1 ngày"/>
             <mat-error
               *ngIf="editTerminalForm.controls.levelLimit.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgMin0' | translate"
             ></mat-error>
           </mat-form-field>
 
-          <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPos()">
+          <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPos()" 
+          matTooltip="Khi phần bấm nút này, phần phí được thiết lập bên trái ngay lập tức sẽ được áp dụng cho tất cả các chi nhánh">
             <svg
               width="1em"
               height="1em"
@@ -265,7 +271,8 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
-          <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPosForOffice()">
+          <button mat-raised-button color="primary" (click)="setDefaultFeeSettingPosForOffice()"
+          matTooltip="Khi phần bấm nút này, phần phí được thiết lập bên trên ngay lập tức sẽ được áp dụng cho chi nhánh được chọn ở ô bên trái.">
             <svg
               width="1em"
               height="1em"
@@ -342,8 +349,26 @@
               <td mat-cell *matCellDef="let element">{{ element.cardDescription }}</td>
             </ng-container>
 
-            <ng-container matColumnDef="FeePOS">
-              <th mat-header-cell *matHeaderCellDef>
+            <ng-container matColumnDef="FeeCost">
+              <th mat-header-cell *matHeaderCellDef matTooltip="Phí phải trả cho Đối tác máy">
+                {{ "Terminal_Component.FormTerminal.tableFee.FeeCost" | translate }}
+              </th>
+              <td mat-cell *matCellDef="let element; let i = index">
+                <mat-form-field floatLabel="never">
+                  <input
+                    matInput
+                    type="number"
+                    id="{{ i }}_costPercentage"
+                    [value]="element.costPercentage"
+                    [(ngModel)]="element.costPercentage"
+                    [ngModelOptions]="{ standalone: true }"
+                  />
+                </mat-form-field>
+              </td>
+            </ng-container>
+            
+            <ng-container matColumnDef="FeeCOGS">
+              <th mat-header-cell *matHeaderCellDef matTooltip="Phí áp dụng cho các chi nhánh">
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeCogs" | translate }}
               </th>
               <td mat-cell *matCellDef="let element; let i = index">
@@ -360,26 +385,10 @@
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="FeeCost">
-              <th mat-header-cell *matHeaderCellDef>
-                {{ "Terminal_Component.FormTerminal.tableFee.FeeCost" | translate }}
-              </th>
-              <td mat-cell *matCellDef="let element; let i = index">
-                <mat-form-field floatLabel="never">
-                  <input
-                    matInput
-                    type="number"
-                    id="{{ i }}_costPercentage"
-                    [value]="element.costPercentage"
-                    [(ngModel)]="element.costPercentage"
-                    [ngModelOptions]="{ standalone: true }"
-                  />
-                </mat-form-field>
-              </td>
-            </ng-container>
+           
 
             <ng-container matColumnDef="FeeMin">
-              <th mat-header-cell *matHeaderCellDef>
+              <th mat-header-cell *matHeaderCellDef matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng">
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeMin" | translate }}
               </th>
               <td mat-cell *matCellDef="let element; let i = index">
@@ -396,7 +405,7 @@
               </td>
             </ng-container>
 
-            <ng-container matColumnDef="FeeMax">
+            <ng-container matColumnDef="FeeMax" matTooltip="Phí cao nhất được phép áp dụng cho khách hàng">
               <th mat-header-cell *matHeaderCellDef>
                 {{ "Terminal_Component.FormTerminal.tableFee.FeeMax" | translate }}
               </th>
