--- a/src/app/terminals/create-terminals/create-terminals.component.html
+++ b/src/app/terminals/create-terminals/create-terminals.component.html
@@ -126,7 +126,8 @@
 
               <mat-form-field *ngIf="createTerminalForm.contains('timeChargeValid')" fxFlex="30%">
                 <mat-label>Số lần giao dịch cùng ngân hàng/ngày</mat-label>
-                <input matInput type="number" formControlName="timeChargeValid" />
+                <input matInput type="number" formControlName="timeChargeValid" 
+                matTooltip="Đây là cài đặt số mà thẻ được phép cà vào máy POS này và các máy POS khác có cùng một ngân hàng phát hàng"/>
                 <mat-error
                   *ngIf="createTerminalForm.controls.timeChargeValid.hasError('required')"
                   [innerHTML]="'Terminal_Component.FormTerminal.labelRequired' | translate"
@@ -139,7 +140,8 @@
 
               <mat-form-field *ngIf="createTerminalForm.contains('banksCheck')" fxFlex="30%">
                 <mat-label>Không giao dịch thẻ thuộc ngân hàng</mat-label>
-                <mat-select multiple  formControlName="banksCheck">
+                <mat-select multiple required formControlName="banksCheck"
+                matTooltip="Đây là ô chọn các ngân hàng mà thẻ của nó sẽ không được phép thực hiện giao dịch trên máy POS này">
                   <mat-option *ngFor="let bank of banks" [value]="bank.bankCode">
                     {{ bank.bankName }}
                   </mat-option>
@@ -148,7 +150,8 @@
 
               <mat-form-field *ngIf="createTerminalForm.contains('cardsCheck')" fxFlex="30%">
                 <mat-label>Không giao dịch thẻ thuộc loại</mat-label>
-                <mat-select multiple  formControlName="cardsCheck">
+                <mat-select multiple required formControlName="cardsCheck" 
+                matTooltip="Đây là ô chọn các loại thẻ sẽ không được phép thực hiện giao dịch trên máy POS này">
                   <mat-option *ngFor="let type of cardTypes" [value]="type.code">
                     {{ type.description }}
                   </mat-option>
@@ -163,7 +166,7 @@
         <div fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
           <mat-form-field *ngIf="createTerminalForm.contains('costPercentage')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelCostPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="costPercentage" type="number" />
+            <input matInput required formControlName="costPercentage" type="number" matTooltip="Phí phải trả cho Đối tác máy"/>
             <mat-error
               *ngIf="createTerminalForm.controls.costPercentage.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -175,7 +178,7 @@
           </mat-form-field>
           <mat-form-field *ngIf="createTerminalForm.contains('cogsPercentage')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelCogsPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="cogsPercentage" type="number" />
+            <input matInput required formControlName="cogsPercentage" type="number" matTooltip="Phí áp dụng cho các chi nhánh" />
             <mat-error
               *ngIf="createTerminalForm.controls.cogsPercentage.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -187,7 +190,7 @@
           </mat-form-field>
           <mat-form-field *ngIf="createTerminalForm.contains('txnRateMin')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMinPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="txnRateMin" type="number" />
+            <input matInput required formControlName="txnRateMin" type="number" matTooltip="Phí thấp nhất được phép áp dụng cho khách hàng"/>
             <mat-error
               *ngIf="createTerminalForm.controls.txnRateMin.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -199,7 +202,7 @@
           </mat-form-field>
           <mat-form-field *ngIf="createTerminalForm.contains('txnRateMax')" fxFlex="10%">
             <mat-label>{{ "Terminal_Component.FormTerminal.labelMaxPercentage" | translate }}</mat-label>
-            <input matInput required formControlName="txnRateMax" type="number" />
+            <input matInput required formControlName="txnRateMax" type="number"matTooltip="Phí cao nhất được phép áp dụng cho khách hàng" />
             <mat-error
               *ngIf="createTerminalForm.controls.txnRateMax.hasError('min')"
               [innerHTML]="'Terminal_Component.FormTerminal.labelMsgOutOffMin' | translate"
@@ -331,23 +334,6 @@
             <mat-cell *matCellDef="let element">{{ element.cardCode }} </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="FeePOS">
-            <mat-header-cell *matHeaderCellDef>{{
-              "Terminal_Component.FormTerminal.tableFee.FeeCogs" | translate
-            }}</mat-header-cell>
-            <mat-cell *matCellDef="let element; let i = index">
-              <mat-form-field>
-                <input
-                  type="text"
-                  matInput
-                  [value]="element.cogsPercentage"
-                  [(ngModel)]="element.cogsPercentage"
-                  [ngModelOptions]="{ standalone: true }"
-                />
-              </mat-form-field>
-            </mat-cell>
-          </ng-container>
-
           <ng-container matColumnDef="FeeCost">
             <mat-header-cell *matHeaderCellDef>{{
               "Terminal_Component.FormTerminal.tableFee.FeeCost" | translate
@@ -365,6 +351,23 @@
             </mat-cell>
           </ng-container>
 
+          <ng-container matColumnDef="FeePOS">
+            <mat-header-cell *matHeaderCellDef>{{
+              "Terminal_Component.FormTerminal.tableFee.FeeCogs" | translate
+            }}</mat-header-cell>
+            <mat-cell *matCellDef="let element; let i = index">
+              <mat-form-field>
+                <input
+                  type="text"
+                  matInput
+                  [value]="element.cogsPercentage"
+                  [(ngModel)]="element.cogsPercentage"
+                  [ngModelOptions]="{ standalone: true }"
+                />
+              </mat-form-field>
+            </mat-cell>
+          </ng-container>
+          
           <ng-container matColumnDef="FeeMin">
             <mat-header-cell *matHeaderCellDef>{{
               "Terminal_Component.FormTerminal.tableFee.FeeMin" | translate
