--- a/src/app/terminals/create-terminals/create-terminals.component.html
+++ b/src/app/terminals/create-terminals/create-terminals.component.html
@@ -140,7 +140,7 @@
 
               <mat-form-field *ngIf="createTerminalForm.contains('banksCheck')" fxFlex="30%">
                 <mat-label>Không giao dịch thẻ thuộc ngân hàng</mat-label>
-                <mat-select multiple required formControlName="banksCheck"
+                <mat-select multiple  formControlName="banksCheck"
                 matTooltip="Đây là ô chọn các ngân hàng mà thẻ của nó sẽ không được phép thực hiện giao dịch trên máy POS này">
                   <mat-option *ngFor="let bank of banks" [value]="bank.bankCode">
                     {{ bank.bankName }}
@@ -150,7 +150,7 @@
 
               <mat-form-field *ngIf="createTerminalForm.contains('cardsCheck')" fxFlex="30%">
                 <mat-label>Không giao dịch thẻ thuộc loại</mat-label>
-                <mat-select multiple required formControlName="cardsCheck" 
+                <mat-select multiple  formControlName="cardsCheck" 
                 matTooltip="Đây là ô chọn các loại thẻ sẽ không được phép thực hiện giao dịch trên máy POS này">
                   <mat-option *ngFor="let type of cardTypes" [value]="type.code">
                     {{ type.description }}
