--- a/src/app/terminals/terminals.component.html
+++ b/src/app/terminals/terminals.component.html
@@ -21,24 +21,32 @@
     <table mat-table [dataSource]="dataSource" matSort>
 
       <ng-container matColumnDef="terminalNo">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Terminal_Component.tableTerminal.terminalNo'| translate}} </th>
-        <td mat-cell *matCellDef="let terminal"> {{ terminal.terminalId }} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+          {{ 'Terminal_Component.tableTerminal.terminalCode'| translate}}
+          <br />
+          ({{ 'Terminal_Component.tableTerminal.terminalNo'| translate}})
+        </th>
+        <td mat-cell *matCellDef="let terminal">
+          {{ terminal.terminalId }}
+          <br/>
+          <label style="text-align: center; color: red;">({{ terminal.terminalCode }})</label>
+        </td>
       </ng-container>
 
-      <ng-container matColumnDef="terminalCode">
+      <!-- <ng-container matColumnDef="terminalCode">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.terminalCode'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.terminalCode }} </td>
-      </ng-container>
+      </ng-container> -->
 
       <ng-container matColumnDef="terminalName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.terminalName'| translate}} </th>
         <td mat-cell *matCellDef="let terminal"> {{ terminal.terminalName }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="minFeeDefault">
+      <!-- <ng-container matColumnDef="minFeeDefault">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.minFeeDefault'| translate}} </th>
         <td mat-cell *matCellDef="let terminal" class="fixNumber"> {{ terminal.minFeeDefault | number }} </td>
-      </ng-container>
+      </ng-container> -->
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>  {{ 'Terminal_Component.tableTerminal.status'| translate}} </th>
@@ -50,8 +58,14 @@
       </ng-container>
 
       <ng-container matColumnDef="createdBy">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>  {{ 'Terminal_Component.tableTerminal.createdBy'| translate}} </th>
-        <td mat-cell *matCellDef="let terminal"> {{ terminal.createdBy }} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>
+           Người tạo
+           </th>
+        <td mat-cell *matCellDef="let terminal">
+          <!-- {{ terminal.createdBy }}
+          <br /> -->
+          <label style="text-align: center; color: red;">{{ terminal.owner ? 'Nội bộ' : terminal.ownerName  }}</label>
+        </td>
       </ng-container>
 
       <ng-container matColumnDef="createdDate">
