temporary Ui for 160 bros

--- a/src/app/home/customerbanner/customerbanner.component.html
+++ b/src/app/home/customerbanner/customerbanner.component.html
@@ -4,7 +4,8 @@
 
             <div class="sign">
                 <span class="sign__word  p-l-20" style="font-size: 1rem;">
-                    <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1>
+                    <!-- <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1> -->
+                    <h1>{{'Home_Component.welcome'| translate}} <strong>Quý khách</strong>! </h1>
                 </span>
 
             </div>
@@ -24,7 +25,19 @@
 
         </div>
         <div class="sign">
-            <span class="sign__word">{{this.childBannerData.title}}</span>
+            <span class="sign__word">{{this.childBannerData.title}}:</span>
+            <span class="sign__word">Đặt cọc chỉ <strong>18 triệu đồng</strong> trước 23:30 HÔM NAY 
+                <br/>để tham gia cộng đồng POS bền vững và chuyên nghiệp nhất Việt Nam.</span>
+            <span class="sign__word">Chi tiết đặt cọc</span>
+            <span class="sign__word">
+                <ul>
+                    <li>Người nhận: Nguyễn Hoàng Anh</li>
+                    <li>Số tài khoản: ...</li>
+                    <li>Nội dung chuyển khoản: [SDT] [Họ và Tên] [Doanh số tối thiểu mỗi tháng]<br/><br/>
+                        Ví dụ: <strong>0909866615 Nguyen Hoang Anh 30T</strong></li>
+                    <li>Liên hệ phòng sản phẩm: Nguyễn Hoàng Anh - 0909.8666.15 </li>
+                </ul>
+            </span>
             <!-- <span class="sign__word">festival</span>
       <span class="sign__word">today</span> -->
         </div>
