--- a/src/app/home/customerbanner/customerbanner.component.scss
+++ b/src/app/home/customerbanner/customerbanner.component.scss
@@ -5,14 +5,19 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 
   &__word {
-    font-size: 10rem;
-    text-align: center;
+    font-size: 1.5rem;
+    margin-top: 0.5rem;
+    text-align: left;
     line-height: 1;
     color: #c6e2ff;
     animation: neon 0.08s ease-in-out infinite alternate;
+    li{
+      font-size: 1rem;
+      margin-top: 0.5rem;
+    }
   }
 }
 
@@ -32,12 +37,12 @@
 }
 
 .bannerbg {
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(28, 0, 138, 0.5)), url(../../../assets/images/banner/62b.png);
+  background: linear-gradient(90deg, rgba(0, 0, 0, 0.9), rgba(28, 0, 138, 0.5)), url(../../../assets/images/banner/2650401.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-color: #141414;
-  height: 250px;
+  height: 400px;
   width: 100%;
   border-radius: 5px;
 }
