--- a/src/app/core/shell/toolbar/toolbar.component.html
+++ b/src/app/core/shell/toolbar/toolbar.component.html
@@ -64,7 +64,7 @@
 
       </button>
     </div>
-    <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
+    <!-- <div fxLayout="row" *midasHasPermission="'ALL_FUNCTIONS'" fxLayoutGap.gt-md="1rem" fxLayoutGap.lt-md="0.75rem">
 
       <button mat-mini-fab color="basic" *midasHasActiveModule="'billModule'" [routerLink]="['/bills']"
         matTooltip="Quản lý hóa đơn đầu vào">
@@ -79,7 +79,7 @@
         matTooltip="Quản trị hệ thống">
         <i class="fas fa-cogs"></i>
       </button>
-    </div>
+    </div> -->
   </div>
 
   <!-- <button mat-mini-fab *ngIf="sidenav.opened" (click)="toggleSidenavCollapse()" matTooltip="Toggle Collapse"
