--- a/src/app/home/customerbanner/customerbanner.component.html
+++ b/src/app/home/customerbanner/customerbanner.component.html
@@ -5,7 +5,7 @@
             <div class="sign">
                 <span class="sign__word  p-l-20" style="font-size: 1rem;">
                     <!-- <h1>{{'Home_Component.welcome'| translate}} <strong>{{this.childBannerData.userName}}</strong>! </h1> -->
-                    <h1>{{'Home_Component.welcome'| translate}} <strong>Quý khách</strong>! </h1>
+                    <h1>{{'Home_Component.welcome'| translate}} <strong>Ông chủ</strong>! </h1>
                 </span>
 
             </div>
@@ -26,7 +26,7 @@
         </div>
         <div class="sign">
             <span class="sign__word">{{this.childBannerData.title}}:</span>
-            <span class="sign__word"><strong >ĐẶT GẠCH </strong>chỉ với <strong class="aa">18 triệu đồng</strong> trước 23:30 HÔM NAY 
+            <span class="sign__word"><strong >ĐẶT GẠCH </strong>chỉ với <strong class="aa">18 triệu đồng</strong> trước 23:30 HÔM NAY
                 <br/>để tham gia cộng đồng POS bền vững và chuyên nghiệp nhất Việt Nam.</span>
             <span class="sign__word">Chi tiết đặt cọc</span>
             <span class="sign__word">
