--- a/src/app/clients/clients-view/clients-view.component.html
+++ b/src/app/clients/clients-view/clients-view.component.html
@@ -12,7 +12,7 @@
             <img mat-card-md-image class="profile-image"
               [src]="clientImage ? clientImage : 'assets/images/user_placeholder.png'" />
           </div>
-          <div fxLayoutAlign="center center" class="m-b-5">
+          <div fxLayoutAlign="center center" class="m-b-5" *ngIf="!this.isInterchangeClient">
             <button class="client-image-button" mat-raised-button (click)="doAction('Upload Image')"
               [matTooltip]="'Client_Component.ViewClient.tipUploadImage' | translate"
               *midasHasPermission="'CREATE_CLIENTIMAGE'">
@@ -48,20 +48,21 @@
             <mat-card-subtitle>
               <p>
                 {{ "Client_Component.ViewClient.lblCifNo" | translate }}: {{ clientViewData?.accountNo }} <br />
-                {{ "Client_Component.ViewClient.lblExternalID" | translate }}: {{ clientViewData?.externalId }} <br />
-                Nhân viên quản lý: {{clientViewData?.staffName || "Chưa phân bổ"}}<br />
+                <label>{{ "Client_Component.ViewClient.lblExternalID" | translate }}: {{ clientViewData?.externalId }} <br /> </label>
+                <label *ngIf="!this.isInterchangeClient">Nhân viên quản lý: {{clientViewData?.staffName || "Chưa phân bổ"}} <br /></label>
                 {{ "Client_Component.ViewClient.lblActivationDate" | translate }} : {{
                 clientViewData?.activationDate
                 ? (clientViewData?.activationDate | date)
                 : ("Client_Component.ViewClient.lblNotActivated" | translate)
                 }}<br />
-                {{ "Client_Component.ViewClient.lblMemberOf" | translate }}:
+                <label *ngIf="!this.isInterchangeClient">{{ "Client_Component.ViewClient.lblMemberOf" | translate }}:
                 <span *ngFor="let group of clientViewData?.groups">
                   <a [routerLink]="['/groups', group.id, 'general']">{{ group.name }}</a>&nbsp;
                 </span>
                 <span *ngIf="!clientViewData.groups">{{ "Client_Component.ViewClient.lblUnassigned" | translate
                   }}</span>
-                <br />
+                  <br />
+                  </label>
               </p>
             </mat-card-subtitle>
           </div>
@@ -87,7 +88,7 @@
           class="client-actions">
 
           <span *midasHasPermission="'UPDATE_CLIENT'" class="m-b-10" fxLayoutAlign="center stretch">
-            <button mat-raised-button [routerLink]="['edit']">
+            <button mat-raised-button [routerLink]="['edit']" *ngIf="!this.isInterchangeClient">
               <i class="fa fa-edit"></i>{{ "Client_Component.ViewClient.btnEdit" | translate }}
             </button>
           </span>
@@ -121,13 +122,22 @@
             <i class="fas fa-tasks"></i>{{ "Client_Component.ViewClient.btnAction" | translate }}
           </button>
           <mat-menu #Actions="matMenu">
-            <button mat-menu-item [routerLink]="['savings-accounts', 'create']">
-              <i class="fas fa-file-invoice-dollar"></i> {{ "Client_Component.ViewClient.btnNewSaving" | translate }}
-            </button>
-            <button mat-menu-item (click)="doAction('Update Default Savings')"
+            <div *ngIf="this.isInterchangeClient">
+              <button mat-menu-item [routerLink]="['savings-accounts', 'createIcAccount']">
+                <i class="fas fa-file-invoice-dollar"></i> {{ "Client_Component.ViewClient.btnNewSaving" | translate }}
+              </button>
+            </div>
+            <div *ngIf="!this.isInterchangeClient">
+              <button mat-menu-item [routerLink]="['savings-accounts', 'create']">
+                <i class="fas fa-file-invoice-dollar"></i> {{ "Client_Component.ViewClient.btnNewSaving" | translate }}
+              </button>
+            </div>
+            <div *ngIf="!this.isInterchangeClient">
+            <button mat-menu-item  (click)="doAction('Update Default Savings')"
               *midasHasPermission="'UPDATESAVINGSACCOUNT_CLIENT'">
               <i class="fas fa-file-invoice"></i> {{ "Client_Component.ViewClient.btnUpdateDefaultSaving" | translate }}
             </button>
+          </div>
             <div *ngIf="!this.isInterchangeClient">
               <button mat-menu-item (click)="doAction('Create Self Service User')">
                 <i class="fas fa-portrait"></i> {{ "Client_Component.ViewClient.btnCreateSelfService" | translate }}
